# LeagueRecorder

./: .gitignore  download_cursors.py  index.html  package-lock.json  package.json
.github/workflows/: release.yml
leaguerec-obs/: .gitignore  CMakeLists.txt  README.md
leaguerec-obs/cmake/: FindLibObs.cmake
leaguerec-obs/scripts/: assemble-runtime.ps1  build-obs.ps1  build-server.ps1  run-dev.ps1
leaguerec-obs/src/: main.cpp  recorder.cpp  recorder.h
python_scripts/: analyzer.py  autolabel.py  bench_mask.py  build_dataset.py  click_verifier_dataset.py  eval_clicks.py  eval_verifier.py  gt_click_dataset.py  requirements.txt  setup_runtime.ps1  synth_dataset.py  train_click_verifier.py  train_cursor.py  yolo_backend.py
scripts/: download-champions.ps1
src/: App.css  App.tsx  fonts.css  index.css  main.tsx
src-tauri/: .taurignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: api_listener.rs  commands.rs  cv_analyzer.rs  dataset_generator.rs  detector.rs  lib.rs  obs_client.rs  recorder.rs  riot_api.rs  storage.rs  streamer.rs  ultimate.rs  wgc_recorder.rs
src/components/: ChampionAvatar.tsx  Titlebar.tsx
src/components/ui/: DialogProvider.tsx
src/core/: ddragon.ts  matchStats.ts  tauri-ipc.ts
src/features/gallery/: useGallery.ts
src/features/gallery/components/: ClipsGallery.tsx  ErrorsGallery.tsx  MatchGallery.tsx
src/features/player/components/: ErrorPlayer.tsx  VideoPlayer.tsx
src/features/settings/components/: SettingsPanel.tsx
src/features/vod/components/: VodGallery.tsx
src/types/: index.ts
